feat: add relation db

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Business Card</title>
+    <title>Online_Directory</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <header>
-        <h1>온라인 명함 관리 서비스</h1>
+        <h1>Online_Directory</h1>
         <a href="{{ url_for('index') }}">Home</a> | <a href="{{ url_for('add_contact') }}">Add Contact</a>
     </header>
     <main>
