--- a/templates/add_contact.html
+++ b/templates/add_contact.html
@@ -8,7 +8,18 @@
     
     <label for="phone">전화번호:</label>
     <input type="text" name="phone" required><br>
-    
+
+    <label for="relation">관계:</label>
+    <select name="relation" required>
+        <option value="가족">가족</option>
+        <option value="친구">친구</option>
+        <option value="회사">회사</option>
+        <option value="학교">학교</option>
+        <option value="상사">상사</option>
+    </select><br>
+
+
+
     <label for="email">이메일:</label>
     <input type="email" name="email"><br>
     
