--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,9 +4,11 @@
 <h2>상세 정보</h2>
 <p><strong>이름:</strong> {{ contact.name }}</p>
 <p><strong>전화번호:</strong> {{ contact.phone }}</p>
+<p><strong>관계:</strong> {{ contact.relation }}</p>
 <p><strong>이메일:</strong> {{ contact.email }}</p>
 <p><strong>생일:</strong> {{ contact.birthday }}</p>
 <p><strong>주소:</strong> {{ contact.address }}</p>
+
 
 <!-- 삭제 버튼 -->
 <form action="{{ url_for('delete_contact', id=contact.id) }}" method="post">
