--- a/templates/detail.html
+++ b/templates/detail.html
@@ -9,11 +9,19 @@
 <p><strong>생일:</strong> {{ contact.birthday }}</p>
 <p><strong>주소:</strong> {{ contact.address }}</p>
 
+<div style="display: inline-flex; gap:10px">
+    <!-- 삭제 버튼 -->
 
-<!-- 삭제 버튼 -->
-<form action="{{ url_for('delete_contact', id=contact.id) }}" method="post">
-    <button type="submit" onclick="return confirm('정말 삭제하시겠습니까?');">삭제</button>
-</form>
+
+    <form action="{{ url_for('delete_contact', id=contact.id) }}" method="post">
+        <button type="submit" onclick="return confirm('정말 삭제하시겠습니까?');">삭제</button>
+    </form>
+
+    <!-- 수정 버튼 -->
+    <a href="{{ url_for('edit_contact', id=contact.id)}}">
+        <button type="button">수정</button>
+    </a>
+</div>
 
 <a href="{{ url_for('index') }}">돌아가기</a>
 {% endblock %}
