--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,13 @@
 {% block content %}
 <h2>전화번호부</h2>
 
-<div>
+<div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
     <!-- 검색 입력란 -->
-    <input type="text" id="search" placeholder="검색...">
+    
     <button id="sortButton" class="btn" data-sort="{{ 'name_asc' if sort_order == 'name_desc' else 'name_desc' }}">
         {{ '추가순 정렬' if sort_order == 'name_asc' else '이름순 정렬' }}
     </button>
+    <input type="text" id="search" placeholder="검색..." style="margin-left: 20px; padding: 5px; font-size: 16px; border: 1px solid #ccc; border-radius: 5px;">
 </div>
 
 
